Increase width of time component on the event card to ensure that the text does not wrap oddly.

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -37,7 +37,7 @@ ul#eventlist .datetime {
 .datetime .time {
 	margin-left: auto;
 	margin-right: auto;
-	width: 50%;
+	width: 60%;
 }
 
 .datetime .ampm {
